# ai-agents-server

./: .gitignore  AI_ENHANCEMENTS_SUMMARY.md  COMPREHENSIVE_TESTING_REPORT.md  ENHANCED_AI_INTEGRATION_SUMMARY.md  FINAL_AI_INSIGHTS_TESTING_REPORT.md  FINAL_AI_VERIFICATION_REPORT.md  INTEGRATION_TEST_REPORT.md  INTEGRATION_VALIDATION_REPORT.md  README.md  ai_insights_analysis.md  check_debt_details.py  comprehensive_ai_test_suite.py  cookies.txt  create_ai_cache_tables.py  create_real_user_test.py  create_real_user_with_session.py  create_simple_test_user.py  debug_ai_insights.py  demonstrate_professional_ai.py  final_professional_test.json  insights_175408.json  integration_test_report_20250923_044533.json  professional_ai_fixed_test.json  professional_ai_test.json  professional_fields_test.json  pyproject.toml  quick_ai_test.py  render.yaml  requirements.txt  run_debtease.py  run_migrations.py  run_tests.py  simple_server.py  start_server.py  test_db_sessions.py  test_imports.py  test_recommendations_caching.py
.github/workflows/: ci.yml
alembic/versions/: add_ai_insights_cache.py
app/: blockchain_interface.py  dependencies.py  main.py
app/agents/: __init__.py  orchestrator.py
app/agents/budget-tracking-agent/: expense_tracker_agent.py  orchestrator.py  savings_goal_tracker_agent.py
app/agents/budget_tracking_agent/: __init__.py  alert_notification_agent.py  budget_planner_agent.py  expense_tracker_agent.py  hybrid_expense_tracker.py  insight_analysis_agent.py  orchestrator.py
app/agents/debt-optimizer-agent/: debt_analyzer_agent.py
app/agents/debt-optimizer-agent/outputs/: debt_analysis_20250419_000000.json
app/agents/debt_optimizer_agent/: __init__.py  ai_recommendation_agent.py  debt_optimizer_agent.py  dti_calculator_agent.py  enhanced_debt_analyzer.py  enhanced_debt_optimizer.py  enhanced_orchestrator.py  langgraph_orchestrator.py  orchestrator.py  test_enhanced_agents.py
app/agents/debt_optimizer_agent/outputs/: debt_optimization_20250419_000000.json
app/agents/debt_optimizer_agent/test_file/: current_debts_test.json  debts.json
app/agents/wealth_management_agent/: __init__.py
app/configs/: config.py
app/databases/: __init__.py  database.py  test_database.py
app/databases/migrations/: 001_create_users_table.sql  002_create_debts_table.sql  003_create_payment_history_table.sql  004_create_ai_recommendations_table.sql  005_create_user_streaks_table.sql  006_create_repayment_plans_table.sql  007_create_notifications_table.sql  008_onboarding_schema_updates.sql  __init__.py  migration_runner.py
app/middleware/: __init__.py  auth.py
app/models/: ai.py  ai_insights_cache.py  analytics.py  base.py  budget.py  debt.py  did.py  financial_goal.py  onboarding.py  payment.py  transaction.py  user.py  user_sqlalchemy.py  verifiable_credentials.py
app/repositories/: __init__.py  analytics_repository.py  base_repository.py  debt_repository.py  goals_repository.py  onboarding_repository.py  payment_repository.py  user_repository.py
app/routes/: __init__.py  ai.py  auth.py  auth_new.py  debt.py  debt_new.py  notification.py  onboarding.py  payment_new.py  repayment_plan.py
app/services/: ai_insights_cache_service.py  ai_processing_worker.py  ai_service.py  onboarding_service.py
app/utils/: README.md  auth.py  budget_data_formatter.py  financial_parser_example.py  financial_statement_parser.py  parse_statement.py  smart_categorizer.py
assests/system/: highleveldesign.puml
backend/: pyproject.toml  requirements.txt
backend/app/agents/: debt_analyzer_agent.py  debt_optimizer_agent.py  orchestrator.py  visualize_agentic_flow.py
backend/app/models/: debt.py  notification.py  payment.py  repayment_plan.py
implementation/: budgetting-agent.md
test/: README.md  conftest.py  test_ai_agents.py  test_ai_endpoint_fix.py  test_ai_endpoints.py  test_ai_enhancements.py  test_api_comprehensive.py  test_api_endpoints.py  test_auth.py  test_auth_with_session.py  test_complete_flow.py  test_debt_analyzer_fix.py  test_direct_professional.py  test_e2e_workflows.py  test_enhanced_ai_output.py  test_enhanced_integration.py  test_fallback_system.py  test_fixed_ai_agents.py  test_imports.py  test_models.py  test_models_comprehensive.py  test_onboarding_api.py  test_onboarding_e2e.py  test_onboarding_error_scenarios.py  test_onboarding_performance.py  test_onboarding_repository.py  test_onboarding_service.py  test_performance.py  test_professional_consultation.py  test_professional_integration.py  test_professional_validation.py  test_real_user.py  test_real_user_simple.py  test_repositories_integration.py  test_repositories_simple.py  test_with_bearer.py
test_doc/: raw_data.json
